@@ -18,6 +18,7 @@ package io.awspring.cloud.sqs;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class CollectionUtils {
@@ -25,8 +26,9 @@ public class CollectionUtils {
 	public static <T> List<Collection<T>> partition(Collection<T> messagesToAck, int pageSize) {
 		List<T> messagesToUse = getAsList(messagesToAck);
 		int totalSize = messagesToUse.size();
-		return IntStream.rangeClosed(0, (totalSize - 1) / pageSize).mapToObj(index -> (Collection<T>) messagesToUse
-				.subList(index * pageSize, Math.min((index + 1) * pageSize, totalSize))).toList();
+		return IntStream.rangeClosed(0, (totalSize - 1) / pageSize)
+				.mapToObj(index -> messagesToUse.subList(index * pageSize, Math.min((index + 1) * pageSize, totalSize)))
+				.collect(Collectors.toList());
 	}
 
 	private static <T> List<T> getAsList(Collection<T> elements) {
